syntax = "proto3";

package evm.uniswap.v4;

message Events { repeated Transaction transactions = 1; }

message Transaction {
  bytes hash = 1;
  bytes from = 2;
  optional bytes to = 3;
  uint64 nonce = 5;
  string gas_price = 6; // uint256
  uint64 gas_limit = 7;
  uint64 gas_used = 8;
  string value = 9; // uint256
  repeated Log logs = 10;
}

// https://github.com/Uniswap/v4-core/blob/main/src/interfaces/IPoolManager.sol
// https://github.com/Uniswap/v4-core/blob/59d3ecf53afa9264a16bba0e38f4c5d2231f80bc/src/interfaces/IProtocolFees.sol
message Log {
  bytes address = 1;
  uint64 ordinal = 2;
  repeated bytes topics = 3;
  bytes data = 4;
  oneof log {
    // IPoolManager
    Swap swap = 10;
    Initialize initialize = 11;
    ModifyLiquidity modify_liquidity = 12;
    Donate donate = 13;

    // IProtocolFees
    ProtocolFeeControllerUpdated protocol_fee_controller_updated = 14;
    ProtocolFeeUpdated protocol_fee_updated = 15;
  }
}

/// @notice Emitted when a new pool is initialized
/// @param id The abi encoded hash of the pool key struct for the new pool
/// @param currency0 The first currency of the pool by address sort order
/// @param currency1 The second currency of the pool by address sort order
/// @param fee The fee collected upon every swap in the pool, denominated in
/// hundredths of a bip
/// @param tickSpacing The minimum number of ticks between initialized ticks
/// @param hooks The hooks contract address for the pool, or address(0) if none
/// @param sqrtPriceX96 The price of the pool on initialization
/// @param tick The initial tick of the pool corresponding to the initialized
/// price
message Initialize {
  bytes factory = 1;         // log.address - the factory that initialized the pool
  // STORE primary key
  bytes id = 2;              // address (Pool ID)
  bytes currency0 = 3;       // address (token0)
  bytes currency1 = 4;       // address (token1)
  uint64 fee = 5;            // uint24 (e.g., 3000 represents 0.30%)
  int32 tick_spacing = 6;    // int24 (e.g., 60)
  optional string hooks = 7; // NOT IMPLEMENTED
  string sqrt_price_x96 = 8; // uint160
  int32 tick = 9;            // int24
}

/// @notice Emitted for swaps between currency0 and currency1
/// @param id The abi encoded hash of the pool key struct for the pool that was
/// modified
/// @param sender The address that initiated the swap call, and that received
/// the callback
/// @param amount0 The delta of the currency0 balance of the pool
/// @param amount1 The delta of the currency1 balance of the pool
/// @param sqrtPriceX96 The sqrt(price) of the pool after the swap, as a Q64.96
/// @param liquidity The liquidity of the pool after the swap
/// @param tick The log base 1.0001 of the price of the pool after the swap
/// @param fee The swap fee in hundredths of a bip
message Swap {
  bytes id = 1;              // address (Pool ID)
  bytes sender = 2;          // address
  string amount0 = 3;        // int256
  string amount1 = 4;        // int256
  string sqrt_price_x96 = 5; // uint160
  string liquidity = 6;      // uint128
  int32 tick = 7;            // int24
  string fee = 8;            // int256
}

/// @notice Emitted when a liquidity position is modified
/// @param id The abi encoded hash of the pool key struct for the pool that was
/// modified
/// @param sender The address that modified the pool
/// @param tickLower The lower tick of the position
/// @param tickUpper The upper tick of the position
/// @param liquidityDelta The amount of liquidity that was added or removed
/// @param salt The extra data to make positions unique
message ModifyLiquidity {
  bytes id = 1;               // address (Pool ID)
  bytes sender = 2;           // address
  int32 tick_lower = 3;       // int24
  int32 tick_upper = 4;       // int24
  string liquidity_delta = 5; // int128
  bytes salt = 6;             // bytes32
}

/// @notice Emitted for donations
/// @param id The abi encoded hash of the pool key struct for the pool that was
/// donated to
/// @param sender The address that initiated the donate call
/// @param amount0 The amount donated in currency0
/// @param amount1 The amount donated in currency1
message Donate {
  bytes id = 1;       // address (Pool ID)
  bytes sender = 2;   // address
  string amount0 = 3; // uint256
  string amount1 = 4; // uint256
}

/// @notice Emitted when the protocol fee controller address is updated in
/// setProtocolFeeController.
message ProtocolFeeControllerUpdated {
  bytes protocol_fee_controller = 1; // address
}

message ProtocolFeeUpdated {
  bytes id = 1;            // address (Pool ID)
  uint64 protocol_fee = 2; // uint24
}
